--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="Web site created using create-react-app"
       data-rh="true"
     />
+    <meta name="google-site-verification" content="A5N6NFyLPbqlUYzDsion9uqb0W5U55wi7MuCGpFGVGs" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
